--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Oriental Journeys</title>
     <!-- ========== FONT AWESOME LINK ==========  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <!-- ========== KALAM FONT LINK ==========  -->
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
     <!-- ========== CSS FILE LINK ==========  -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
