Created navigation structure in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 </head>
 
 <body>
-
+    <!-- ========== NAVIGATION STARTS ==========  -->
+    <nav class="navbar">
+        <a href="#" class="navbar__logo"><i class="fa-solid fa-plane-departure navbar__logo-text"></i>Oriental Journeys</a>
+        <ul class="navbar__list">
+            <li><a href="#home" class="navbar__list-item navbar__list-item--active">home</a></li>
+            <li><a href="#about" class="navbar__list-item">about</a></li>
+            <li><a href="#teacher" class="navbar__list-item">teacher</a></li>
+            <li><a href="#course" class="navbar__list-item">course</a></li>
+            <li><a href="#review" class="navbar__list-item">review</a></li>
+            <li><a href="#contact" class="navbar__list-item">contact</a></li>
+        </ul>
+        <i class="navbar__icon fas fa-bars "></i>
+    </nav>
+    <!-- ========== NAVIGATION ENDS ==========  -->
 
 
 
