Improved navigation structure in index.html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <a href="#" class="navbar__logo"><i class="fa-solid fa-plane-departure navbar__logo-text"></i>Oriental Journeys</a>
         <ul class="navbar__list">
             <li><a href="#home" class="navbar__list-item navbar__list-item--active">home</a></li>
+            <li><a href="#feature" class="navbar__list-item">feature</a></li>
             <li><a href="#about" class="navbar__list-item">about</a></li>
-            <li><a href="#teacher" class="navbar__list-item">teacher</a></li>
-            <li><a href="#course" class="navbar__list-item">course</a></li>
+            <li><a href="#gallery" class="navbar__list-item">gallery</a></li>
             <li><a href="#review" class="navbar__list-item">review</a></li>
             <li><a href="#contact" class="navbar__list-item">contact</a></li>
         </ul>
