Added styles to mobile navigation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
     <!-- ========== NAVIGATION STARTS ==========  -->
     <nav class="navbar">
-        <a href="#" class="navbar__logo"><i class="fa-solid fa-plane-departure navbar__logo-text"></i>Oriental Journeys</a>
+        <a href="#" class="navbar__logo"><i class="fa-solid fa-plane-departure "></i><span
+                class="navbar__logo-text">Oriental Journeys</span></a>
         <ul class="navbar__list">
             <li><a href="#home" class="navbar__list-item navbar__list-item--active">home</a></li>
             <li><a href="#feature" class="navbar__list-item">feature</a></li>
