Added basic structure of header section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,36 @@
     </nav>
     <!-- ========== NAVIGATION ENDS ==========  -->
 
+    <!-- ========== HEADER STARTS ==========  -->
+
+    <header id="home" class="home section section-padding">
+        <div class="home__bg">
+            <video src="./video/ocean-mini.mp4" loop muted autoplay class="home__bg-video"></video>
+        </div>
+        <div class="wrapper">
+            <div class="home__content">
+                <h1 class="home__content-title">explore new places, <br> adventure awaits!</h1>
+                <p class="home__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+                    numquam a maiores possimus? Rem velit est modi veniam. Earum, quos.</p>
+                <div class="home__content__form">
+                    <form action="" class="home__content__form-panel">
+                        <h2 class="home__content__form-title">search your destination</h2>
+                        <span class="home__content__form-text">location</span>
+                        <input type="text" class="home__content__form-location" placeholder="place you want to visit">
+                        <span class="home__content__form-text">quest members</span>
+                        <input type="number" class="home__content__form-members" placeholder="number of peoples">
+                        <span class="home__content__form-text">arrivals</span>
+                        <input type="date" class="home__content__form-date">
+                        <span class="home__content__form-text">leaving</span>
+                        <input type="date" class="home__content__form-date">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- ========== HEADER ENDS ==========  -->
+
 
 
     <!-- ========== JAVASCRIPT FILE LINK ==========  -->
