Added styles to header video and sorted out video files

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
     <!-- ========== HEADER STARTS ==========  -->
 
-    <header id="home" class="home section section-padding">
+    <header id="home" class="home section">
         <div class="home__bg">
-            <video src="./video/ocean-mini.mp4" loop muted autoplay class="home__bg-video"></video>
+            <video src="./video/ocean.mp4" loop muted autoplay class="home__bg-video"></video>
         </div>
         <div class="wrapper">
             <div class="home__content">
