Added mobile styles to header section

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <!-- ========== HEADER STARTS ==========  -->
 
-    <header id="home" class="home section">
+    <header id="home" class="home section section-padding">
         <div class="home__bg">
             <video src="./video/ocean.mp4" loop muted autoplay class="home__bg-video"></video>
         </div>
         <div class="wrapper">
-            <div class="home__content">
+            <div class="home">
                 <h1 class="home__content-title">explore new places, <br> adventure awaits!</h1>
                 <p class="home__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
                     numquam a maiores possimus? Rem velit est modi veniam. Earum, quos.</p>
@@ -53,6 +53,7 @@
                         <input type="date" class="home__content__form-date">
                         <span class="home__content__form-text">leaving</span>
                         <input type="date" class="home__content__form-date">
+                        <input type="submit" value="search" class="home__content__form-btn">
                     </form>
                 </div>
             </div>
