Improved mobile styles to header section

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
         </div>
         <div class="wrapper">
             <div class="home">
-                <h1 class="home__content-title">explore new places, <br> adventure awaits!</h1>
-                <p class="home__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-                    numquam a maiores possimus? Rem velit est modi veniam. Earum, quos.</p>
+                <div class="home__content">
+                    <h1 class="home__content-title">explore new places, <br> adventure awaits!</h1>
+                    <p class="home__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+                        numquam a maiores possimus? Rem velit est modi veniam. Earum, quos.</p>
+                </div>
                 <div class="home__content__form">
                     <form action="" class="home__content__form-panel">
                         <h2 class="home__content__form-title">search your destination</h2>
