--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 class="navbar__logo-text">Oriental Journeys</span></a>
         <ul class="navbar__list">
             <li><a href="#home" class="navbar__list-item navbar__list-item--active">home</a></li>
-            <li><a href="#feature" class="navbar__list-item">feature</a></li>
+            <li><a href="#features" class="navbar__list-item">feature</a></li>
             <li><a href="#about" class="navbar__list-item">about</a></li>
             <li><a href="#gallery" class="navbar__list-item">gallery</a></li>
             <li><a href="#review" class="navbar__list-item">review</a></li>
@@ -62,6 +62,22 @@
         </div>
     </header>
 
+    <!-- ========== HEADER ENDS ==========  -->
+
+    <!-- ========== HEADER STARTS ==========  -->
+
+    <main>
+        <!-- ========== FEATURES STARTS ==========  -->
+
+        <section id="features" class="features section section-padding">
+            <div class="wrapper">
+                <h1 class="section-heading"><span class="section-heading-first">f</span>eatured <span
+                        class="section-heading-first">l</span>ocaltions</h1>
+            </div>
+        </section>
+
+        <!-- ========== FEATURES ENDS ==========  -->
+    </main>
     <!-- ========== HEADER ENDS ==========  -->
 
 
