Added basic structure of features section

--- a/index.html
+++ b/index.html
@@ -71,8 +71,66 @@
 
         <section id="features" class="features section section-padding">
             <div class="wrapper">
-                <h1 class="section-heading"><span class="section-heading-first">f</span>eatured <span
-                        class="section-heading-first">l</span>ocaltions</h1>
+                <h2 class="section-heading"><span class="section-heading-first">f</span>eatured <span
+                        class="section-heading-first">l</span>ocaltions</h2>
+                <div class="features__cards">
+                    <div class="features__card">
+                        <span class="features__card-discount">-25%</span>
+                        <img src="" alt="" class="features__card-img">
+                        <div class="features__card__content">
+                            <h3 class="features__card__content-title">egypt</h3>
+                            <p class="features__card__content-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Animi minus atque quis omnis, assumenda fugiat alias asperiores consequatur illum
+                                quo.</p>
+                            <div class="features__card__content__stars">
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star-half-alt features__card__content__stars-star"></i>
+                            </div>
+                            <a href="#" class="features__card__content__link"><button
+                                    class="features__card__content__link-btn">check out</button></a>
+                        </div>
+                    </div>
+                    <div class="features__card">
+                        <span class="features__card-discount"></span>
+                        <img src="" alt="" class="features__card-img">
+                        <div class="features__card__content">
+                            <h3 class="features__card__content-title">israel</h3>
+                            <p class="features__card__content-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Animi minus atque quis omnis, assumenda fugiat alias asperiores consequatur illum
+                                quo.</p>
+                            <div class="features__card__content__stars">
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                            </div>
+                            <a href="#" class="features__card__content__link"><button
+                                    class="features__card__content__link-btn">check out</button></a>
+                        </div>
+                    </div>
+                    <div class="features__card">
+                        <span class="features__card-discount">-50%</span>
+                        <img src="" alt="" class="features__card-img">
+                        <div class="features__card__content">
+                            <h3 class="features__card__content-title">syria</h3>
+                            <p class="features__card__content-text">Lorem ipsum dolor sit amet consectetur adipisicing
+                                elit. Animi minus atque quis omnis, assumenda fugiat alias asperiores consequatur illum
+                                quo.</p>
+                            <div class="features__card__content__stars">
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                                <i class="fas fa-star features__card__content__stars-star"></i>
+                            </div>
+                            <a href="#" class="features__card__content__link"><button
+                                    class="features__card__content__link-btn">check out</button></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
