Added images to website and linked them to features section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <header id="home" class="home section section-padding">
         <div class="home__bg">
-            <video src="./video/ocean.mp4" loop muted autoplay class="home__bg-video"></video>
+            <video src="./img/video/ocean.mp4" loop muted autoplay class="home__bg-video"></video>
         </div>
         <div class="wrapper">
             <div class="home">
@@ -76,7 +76,7 @@
                 <div class="features__cards">
                     <div class="features__card">
                         <span class="features__card-discount">-25%</span>
-                        <img src="" alt="" class="features__card-img">
+                        <img src="./img/egypt.jpg" alt="" class="features__card-img">
                         <div class="features__card__content">
                             <h3 class="features__card__content-title">egypt</h3>
                             <p class="features__card__content-text">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -95,7 +95,7 @@
                     </div>
                     <div class="features__card">
                         <span class="features__card-discount"></span>
-                        <img src="" alt="" class="features__card-img">
+                        <img src="./img/israel.jpg" alt="" class="features__card-img">
                         <div class="features__card__content">
                             <h3 class="features__card__content-title">israel</h3>
                             <p class="features__card__content-text">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -114,7 +114,7 @@
                     </div>
                     <div class="features__card">
                         <span class="features__card-discount">-50%</span>
-                        <img src="" alt="" class="features__card-img">
+                        <img src="./img/syria.jpg" alt="" class="features__card-img">
                         <div class="features__card__content">
                             <h3 class="features__card__content-title">syria</h3>
                             <p class="features__card__content-text">Lorem ipsum dolor sit amet consectetur adipisicing
