Added styles to features section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <section id="features" class="features section section-padding">
             <div class="wrapper">
                 <h2 class="section-heading"><span class="section-heading-first">f</span>eatured <span
-                        class="section-heading-first">l</span>ocaltions</h2>
+                        class="section-heading-first">l</span>ocations</h2>
                 <div class="features__cards">
                     <div class="features__card">
                         <span class="features__card-discount">-25%</span>
@@ -94,7 +94,6 @@
                         </div>
                     </div>
                     <div class="features__card">
-                        <span class="features__card-discount"></span>
                         <img src="./img/israel.jpg" alt="" class="features__card-img">
                         <div class="features__card__content">
                             <h3 class="features__card__content-title">israel</h3>
