Added scroll spy function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body>
+<body class="main-page">
     <!-- ========== NAVIGATION STARTS ==========  -->
     <nav class="navbar">
         <a href="#" class="navbar__logo"><i class="fa-solid fa-plane-departure "></i><span
