Added basic structure of about section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- ========== HEADER ENDS ==========  -->
 
-    <!-- ========== HEADER STARTS ==========  -->
+    <!-- ========== MAIN STARTS ==========  -->
 
     <main>
         <!-- ========== FEATURES STARTS ==========  -->
@@ -134,8 +134,32 @@
         </section>
 
         <!-- ========== FEATURES ENDS ==========  -->
+
+        <!-- ========== ABOUT STARTS ==========  -->
+
+        <section id="about" class="about section section-padding">
+            <h2 class="section-heading"><span class="section-heading-first">a</span>bout <span
+                    class="section-heading-first">u</span>s</h2>
+
+            <div class="about__box">
+                <div class="about__box__image">
+                    <img src="" alt="" class="about__box_image-img">
+                </div>
+                <div class="about__box__content">
+                    <h3 class="about__box__content-title">why choose us?</h3>
+                    <p class="about__box__content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Incidunt fuga, laborum quas, repellat corrupti ducimus molestias maxime itaque qui quidem ipsam
+                        alias, amet beatae magnam ipsum mollitia dignissimos consequuntur temporibus.</p>
+                        <a href="" class="about__box__content__link"><button class="about__box__content__link-btn-more">read more</button></a>
+                        <a href="" class="about__box__content__link"><button class="about__box__content__link-btn">get started</button></a>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- ========== ABOUT ENDS ==========  -->
     </main>
-    <!-- ========== HEADER ENDS ==========  -->
+    <!-- ========== MAIN ENDS ==========  -->
 
 
 
