--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <div class="about__box">
                 <div class="about__box__image">
-                    <img src="" alt="" class="about__box_image-img">
+                    <img src="./img/about-img.svg" alt="" class="about__box_image-img">
                 </div>
                 <div class="about__box__content">
                     <h3 class="about__box__content-title">why choose us?</h3>
