Added desktop style to about section

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                             Incidunt fuga, laborum quas, repellat corrupti ducimus molestias maxime itaque qui quidem
                             ipsam
                             alias, amet beatae magnam ipsum mollitia dignissimos consequuntur temporibus.</p>
-                        <a href="" class="about__box__content__link"><button
+                        <a href="#" class="about__box__content__link"><button
                                 class="about__box__content__link-btn about__box__content__link-btn-more">read
                                 more</button></a>
-                        <a href="" class="about__box__content__link"><button class="about__box__content__link-btn">get
+                        <a href="#" class="about__box__content__link"><button class="about__box__content__link-btn">get
                                 started</button></a>
                     </div>
                 </div>
