Expansioned about section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                             Incidunt fuga, laborum quas, repellat corrupti ducimus molestias maxime itaque qui quidem
                             ipsam
                             alias, amet beatae magnam ipsum mollitia dignissimos consequuntur temporibus.</p>
+                            <p class="about__box__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, tempora.</p>
                         <a href="#" class="about__box__content__link"><button
                                 class="about__box__content__link-btn about__box__content__link-btn-more">read
                                 more</button></a>
