Added basic structure of gallery section and images to the website

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                             Incidunt fuga, laborum quas, repellat corrupti ducimus molestias maxime itaque qui quidem
                             ipsam
                             alias, amet beatae magnam ipsum mollitia dignissimos consequuntur temporibus.</p>
-                            <p class="about__box__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, tempora.</p>
+                        <p class="about__box__content-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Modi, tempora.</p>
                         <a href="#" class="about__box__content__link"><button
                                 class="about__box__content__link-btn about__box__content__link-btn-more">read
                                 more</button></a>
@@ -164,6 +165,21 @@
         </section>
 
         <!-- ========== ABOUT ENDS ==========  -->
+
+        <!-- ========== GALLERY STARTS ==========  -->
+
+        <section id="gallery" class="gallery section section-padding">
+            <div class="wrapper">
+                <h2 class="section-heading"><span class="section-heading-first">g</span>allery</h2>
+                <div class="gallery__box">
+                    <div class="gallery__box__container">
+                        <img src="" alt="" class="gallery__box__container-img">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ========== GALLERY ENDS ==========  -->
     </main>
     <!-- ========== MAIN ENDS ==========  -->
 
