Added images to  gallery section

--- a/index.html
+++ b/index.html
@@ -171,9 +171,72 @@
         <section id="gallery" class="gallery section section-padding">
             <div class="wrapper">
                 <h2 class="section-heading"><span class="section-heading-first">g</span>allery</h2>
-                <div class="gallery__box">
-                    <div class="gallery__box__container">
-                        <img src="" alt="" class="gallery__box__container-img">
+                <div class="gallery__container">
+                    <div class="gallery__container__box">
+                        <img src="./img/gallery-1.jpg" alt="" class="gallery__container__box-img">
+                        <div class="gallery__container__box__icons">
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-heart"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-share"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-search"></i></a>
+                        </div>
+                    </div>
+                    <div class="gallery__container__box">
+                        <img src="./img/gallery-2.jpg" alt="" class="gallery__container__box-img">
+                        <div class="gallery__container__box__icons">
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-heart"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-share"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-search"></i></a>
+                        </div>
+                    </div>
+                    <div class="gallery__container__box">
+                        <img src="./img/gallery-3.jpg" alt="" class="gallery__container__box-img">
+                        <div class="gallery__container__box__icons">
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-heart"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-share"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-search"></i></a>
+                        </div>
+                    </div>
+                    <div class="gallery__container__box">
+                        <img src="./img/gallery-4.jpg" alt="" class="gallery__container__box-img">
+                        <div class="gallery__container__box__icons">
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-heart"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-share"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-search"></i></a>
+                        </div>
+                    </div>
+                    <div class="gallery__container__box">
+                        <img src="./img/gallery-5.jpg" alt="" class="gallery__container__box-img">
+                        <div class="gallery__container__box__icons">
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-heart"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-share"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-search"></i></a>
+                        </div>
+                    </div>
+                    <div class="gallery__container__box">
+                        <img src="./img/gallery-6.jpg" alt="" class="gallery__container__box-img">
+                        <div class="gallery__container__box__icons">
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-heart"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-share"></i></a>
+                            <a href="#" class="gallery__container__box__icons__link"><i
+                                    class="gallery__container__box__icons__link-icon fas fa-search"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
