Added basic structure of reviews section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#features" class="navbar__list-item">feature</a></li>
             <li><a href="#about" class="navbar__list-item">about</a></li>
             <li><a href="#gallery" class="navbar__list-item">gallery</a></li>
-            <li><a href="#review" class="navbar__list-item">review</a></li>
+            <li><a href="#reviews" class="navbar__list-item">reviews</a></li>
             <li><a href="#contact" class="navbar__list-item">contact</a></li>
         </ul>
         <i class="navbar__icon fas fa-bars "></i>
@@ -243,6 +243,73 @@
         </section>
 
         <!-- ========== GALLERY ENDS ==========  -->
+
+        <!-- ========== REVIEW STARTS ==========  -->
+
+        <section id="reviews" class="reviews section section-padding">
+            <h2 class="section-heading"><span class="section-heading-first">r</span>eviews</h2>
+            <div class="reviews__bg">
+                <video src="./img/video/fire.mp4" loop muted autoplay class="reviews__bg-video"></video>
+            </div>
+            <div class="wrapper">
+                <div class="reviews__container">
+                    <div class="reviews__container__box">
+                        <div class="reviews__container__box__image">
+                            <img src="" alt="" class="reviews__container__box__image-img">
+                        </div>
+                        <div class="reviews__container__box__content">
+                            <h3 class="reviews__container__box__content-title">someone's name</h3>
+                            <p class="reviews__container__box__content-text">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Soluta, officia?</p>
+                            <div class="reviews__container__box__content__stars">
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star-half-alt reviews__container__box__content__stars-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reviews__container__box">
+                        <div class="reviews__container__box__image">
+                            <img src="" alt="" class="reviews__container__box__image-img">
+                        </div>
+                        <div class="reviews__container__box__content">
+                            <h3 class="reviews__container__box__content-title">someone's name</h3>
+                            <p class="reviews__container__box__content-text">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Soluta, officia?</p>
+                            <div class="reviews__container__box__content__stars">
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star-half-alt reviews__container__box__content__stars-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reviews__container__box">
+                        <div class="reviews__container__box__image">
+                            <img src="" alt="" class="reviews__container__box__image-img">
+                        </div>
+                        <div class="reviews__container__box__content">
+                            <h3 class="reviews__container__box__content-title">someone's name</h3>
+                            <p class="reviews__container__box__content-text">Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Soluta, officia?</p>
+                            <div class="reviews__container__box__content__stars">
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star-half-alt reviews__container__box__content__stars-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ========== REVIEW ENDS ==========  -->
+
     </main>
     <!-- ========== MAIN ENDS ==========  -->
 
