--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <div class="reviews__container">
                     <div class="reviews__container__box">
                         <div class="reviews__container__box__image">
-                            <img src="" alt="" class="reviews__container__box__image-img">
+                            <img src="./img/review-1.jpg" alt="" class="reviews__container__box__image-img">
                         </div>
                         <div class="reviews__container__box__content">
                             <h3 class="reviews__container__box__content-title">someone's name</h3>
@@ -272,7 +272,7 @@
                     </div>
                     <div class="reviews__container__box">
                         <div class="reviews__container__box__image">
-                            <img src="" alt="" class="reviews__container__box__image-img">
+                            <img src="./img/review-2.jpg" alt="" class="reviews__container__box__image-img">
                         </div>
                         <div class="reviews__container__box__content">
                             <h3 class="reviews__container__box__content-title">someone's name</h3>
@@ -289,7 +289,7 @@
                     </div>
                     <div class="reviews__container__box">
                         <div class="reviews__container__box__image">
-                            <img src="" alt="" class="reviews__container__box__image-img">
+                            <img src="./img/review-3.jpg" alt="" class="reviews__container__box__image-img">
                         </div>
                         <div class="reviews__container__box__content">
                             <h3 class="reviews__container__box__content-title">someone's name</h3>
