Added mobile styles to reviews section

--- a/index.html
+++ b/index.html
@@ -247,9 +247,10 @@
         <!-- ========== REVIEW STARTS ==========  -->
 
         <section id="reviews" class="reviews section section-padding">
-            <h2 class="section-heading"><span class="section-heading-first">r</span>eviews</h2>
+            <h2 class="section-heading reviews__heading"><span class="section-heading-first">r</span>eviews</h2>
             <div class="reviews__bg">
                 <video src="./img/video/fire.mp4" loop muted autoplay class="reviews__bg-video"></video>
+
             </div>
             <div class="wrapper">
                 <div class="reviews__container">
@@ -259,8 +260,8 @@
                         </div>
                         <div class="reviews__container__box__content">
                             <h3 class="reviews__container__box__content-title">someone's name</h3>
-                            <p class="reviews__container__box__content-text">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Soluta, officia?</p>
+                            <p class="reviews__container__box__content-text">Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Id assumenda autem perspiciatis? Voluptatem, illum sapiente!</p>
                             <div class="reviews__container__box__content__stars">
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
@@ -276,8 +277,8 @@
                         </div>
                         <div class="reviews__container__box__content">
                             <h3 class="reviews__container__box__content-title">someone's name</h3>
-                            <p class="reviews__container__box__content-text">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Soluta, officia?</p>
+                            <p class="reviews__container__box__content-text">Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Id assumenda autem perspiciatis? Voluptatem, illum sapiente!</p>
                             <div class="reviews__container__box__content__stars">
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
@@ -293,8 +294,8 @@
                         </div>
                         <div class="reviews__container__box__content">
                             <h3 class="reviews__container__box__content-title">someone's name</h3>
-                            <p class="reviews__container__box__content-text">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Soluta, officia?</p>
+                            <p class="reviews__container__box__content-text">Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Id assumenda autem perspiciatis? Voluptatem, illum sapiente!</p>
                             <div class="reviews__container__box__content__stars">
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
