Added desktop styles to reviews section

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <section id="reviews" class="reviews section section-padding">
             <h2 class="section-heading reviews__heading"><span class="section-heading-first">r</span>eviews</h2>
             <div class="reviews__bg">
-                <video src="./img/video/fire.mp4" loop muted autoplay class="reviews__bg-video"></video>
+                <video src="./img/video/reviews.mp4" loop muted autoplay class="reviews__bg-video"></video>
 
             </div>
             <div class="wrapper">
@@ -284,7 +284,7 @@
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
-                                <i class="fas fa-star-half-alt reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                             </div>
                         </div>
                     </div>
@@ -301,7 +301,7 @@
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                                 <i class="fas fa-star reviews__container__box__content__stars-star"></i>
-                                <i class="fas fa-star-half-alt reviews__container__box__content__stars-star"></i>
+                                <i class="fas fa-star reviews__container__box__content__stars-star"></i>
                             </div>
                         </div>
                     </div>
