--- a/index.html
+++ b/index.html
@@ -311,6 +311,31 @@
 
         <!-- ========== REVIEW ENDS ==========  -->
 
+        <!-- ========== CONTACT STARTS ==========  -->
+        <section id="contact" class="contact section">
+            <h2 class="section-heading"><span class="section-heading-first">c</span>ontact <span class="section-heading-first">u</span>s</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37993.44557087723!2d-2.2847089727407686!3d53.475780953245504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b38c7b89477%3A0x70f28ed6c85674b9!2sKey%20Travel!5e0!3m2!1spl!2spl!4v1678530247836!5m2!1spl!2spl" width="100%" height="300" style="border:0; outline: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="wrapper section-padding">
+                <div class="contact__row">
+                    <div class="contact__info">
+                        <div class="contact__box">
+                            <h3 class="contact__box-title"> <i class="contact__box-icon fas fa-home"></i> adress </h3>
+                            <p class="contact__box-text">9th Floor <br> St James's Bldg <br> 61-95 Oxford St <br> Manchester M1 6EJ <br> UK</p>
+                        </div>
+                        <div class="contact__box">
+                            <h3 class="contact__box-title"> <i class="contact__box-icon fas fa-evelope"></i> e-mail </h3>
+                            <p class="contact__box-text">oriental-journeys@xyz.qwer</p>
+                        </div>
+                        <div class="contact__box">
+                            <h3 class="contact__box-title"> <i class="contact__box-icon fas fa-phone"></i> phone </h3>
+                            <p class="contact__box-text">+123 4567890</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ========== CONTACT ENDS ==========  -->
+
     </main>
     <!-- ========== MAIN ENDS ==========  -->
 
